# seia

./: .gitattributes  Cargo.toml  PLAN.md  README.md  justfile
.github/workflows/: checks.yml  docs.yml  live-tests.yml  npm-release.yml  npm_publish.yml
docs/ar/: README.md
docs/en/: SUMMARY.md  book.toml
docs/en/design/: architecture.md
docs/en/guides/: browser-mode.md  engines.md  quickstart.md
docs/es/: README.md
docs/fr/: README.md
docs/ja/: README.md
docs/ko/: README.md
docs/ru/: README.md
docs/theme/: lang-switcher.js
docs/zhs/: README.md  book.toml
docs/zht/: README.md  book.toml
src/: browser.rs  client.rs  engines.rs  extractor.rs  lib.rs  main.rs  mcp.rs  result.rs
src/engines_impl/: arxiv.rs  crossref.rs  custom.rs  doaj.rs  duckduckgo.rs  metaso.rs  mod.rs  openalex.rs  pubmed.rs  searxng.rs  semantic_scholar.rs  tavily.rs  wikipedia.rs
tests/: integration.rs  live_search.rs  mcp_smoke.rs
