[package]
name = "seia"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["langyo <langyo.china@gmail.com>"]
license = "SySL-1.0"
description = "Universal search engine abstraction — multi-backend web search with API and headless browser modes"
repository = "https://github.com/celestia-island/seia"
keywords = ["search", "web", "duckduckgo", "tavily", "searxng"]
categories = ["api-bindings", "web-programming", "command-line-interface"]

[[bin]]
name = "seia"
path = "src/main.rs"

[lib]
name = "seia"
path = "src/lib.rs"

[dependencies]
tokio = { version = "^1", features = ["full"] }
reqwest = { version = "^0.12", features = ["json", "rustls-tls", "socks"], default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
anyhow = "^1"
clap = { version = "^4", features = ["derive"] }
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }
async-trait = "^0.1"
url = "^2"
regex = "^1"
scraper = "^0.22"
tokio-stream = "^0.1"
# Path overrides the local tairitsu checkout during development;
# `version` is what crates.io resolves when publishing.
tairitsu-packager = { version = "0.5", path = "../tairitsu/packages/packager", default-features = false, features = ["dev-server", "debug-browser"], optional = true }

[features]
default = []
# Embed tairitsu debug server for in-process browser mode.
# Without this feature, seia connects to an external tairitsu daemon via HTTP.
embedded-browser = ["tairitsu-packager"]

[dev-dependencies]
tokio-test = "^0.4"
